--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -25,9 +25,10 @@ GET_MC_RTC_PROPERTY(COMPILE_FLAGS)
 GET_MC_RTC_PROPERTY(INCLUDE_DIRECTORIES)
 GET_MC_RTC_PROPERTY(LINK_FLAGS)
 GET_MC_RTC_PROPERTY(LINK_LIBRARIES)
-GET_MC_RTC_PROPERTY(LOCATION)
-get_target_property(MC_CONTROL_FSM_LOCATION mc_control_fsm LOCATION)
-configure_file(setup.in.py ${CMAKE_CURRENT_SOURCE_DIR}/setup.py)
+set(MC_RTC_LOCATION "$<TARGET_FILE:mc_control>")
+set(MC_CONTROL_FSM_LOCATION "$<TARGET_FILE:mc_control_fsm>")
+configure_file(setup.in.py ${CMAKE_CURRENT_BINARY_DIR}/setup.in.py)
+file(GENERATE OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/setup.py INPUT ${CMAKE_CURRENT_BINARY_DIR}/setup.in.py)
 
 if(${ROSCPP_FOUND})
   set(DEFINE_HAS_ROS_PYTHON_MACRO "DEF MC_RTC_HAS_ROS = 1")
