--- a/src/mc_control/python/CMakeLists.txt
+++ b/src/mc_control/python/CMakeLists.txt
@@ -1,11 +1,9 @@
 include(../../../cmake/python.cmake)
 
-include_directories(../../../binding/python)
-
 findpython()
 
 add_controller("python" "python_controller.cpp" "python_controller.h")
-target_include_directories(python PRIVATE ${PYTHON_INCLUDE_DIRS})
-target_link_libraries(python ${PYTHON_LIBRARIES})
+target_include_directories(python PRIVATE ${PYTHON_INCLUDE_DIRS} ../../../binding/python)
+target_link_libraries(python PUBLIC ${PYTHON_LIBRARIES})
 
 add_dependencies(python mc_rtc-python-bindings)
