--- a/src/mc_robots/CMakeLists.txt
+++ b/src/mc_robots/CMakeLists.txt
@@ -3,7 +3,7 @@ macro(add_robot robot_base)
   set(robot_HDR api.h ${robot_base}.h)
   add_library(${robot_base} SHARED ${robot_SRC} ${robot_HDR})
   set_target_properties(${robot_base} PROPERTIES COMPILE_FLAGS "-DMC_ROBOTS_EXPORTS" PREFIX "")
-  target_link_libraries(${robot_base} mc_rbdyn ${Boost_LIBRARIES})
+  target_link_libraries(${robot_base} PUBLIC mc_rbdyn ${Boost_LIBRARIES})
   pkg_config_use_dependency(${robot_base} mc_rbdyn_urdf)
   install(TARGETS ${robot_base} DESTINATION ${MC_ROBOTS_INSTALL_PREFIX})
 endmacro()
