--- a/tests/robots/CMakeLists.txt
+++ b/tests/robots/CMakeLists.txt
@@ -1,6 +1,6 @@
 macro(robot_test_common NAME)
   add_library(${NAME} SHARED ${NAME}.cpp)
-  target_link_libraries(${NAME} ${Boost_LIBRARIES} mc_rbdyn)
+  target_link_libraries(${NAME} PUBLIC ${Boost_LIBRARIES} mc_rbdyn)
   set_target_properties(${NAME} PROPERTIES
     COMPILE_FLAGS "-DMC_ROBOTS_EXPORTS"
     PREFIX ""
