Don't run FPERobot test on clang

--- a/tests/robots/CMakeLists.txt
+++ b/tests/robots/CMakeLists.txt
@@ -25,6 +25,8 @@ robot_test_construction_failure(NoCreateRobot)
 if(UNIX AND NOT APPLE)
   robot_test_construction_failure(UnresolvedSymbolRobot)
   robot_test_construction_failure(SegfaultRobot)
-  robot_test_construction_failure(FPERobot)
+  if(NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    robot_test_construction_failure(FPERobot)
+  endif()
 endif()
 robot_test_construction_failure(ThrowingRobot)
