Change default robot

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,6 +1,6 @@
 {
   // What robot is being controlled
-  "MainRobot" : "HRP2DRC",
+  "MainRobot" : "JVRC-1",
 
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP", "BCISelfInteract"],
   "Enabled"   : ["CoM"],
