[Trajectory] Implement bezier curve with spline library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -183,18 +183,21 @@ install_mc_rtc_lib(mc_solver)
 
 set(mc_trajectory_SRC
 mc_trajectory/BSplineTrajectory.cpp
+mc_trajectory/BSplineConstrainedTrajectory.cpp
 mc_trajectory/spline_utils.cpp
 )
 
 set(mc_trajectory_HDR
 ../include/mc_trajectory/api.h
 ../include/mc_trajectory/BSplineTrajectory.h
+../include/mc_trajectory/BSplineConstrainedTrajectory.h
 ../include/mc_trajectory/spline_utils.h
 )
 
 add_library(mc_trajectory SHARED ${mc_trajectory_SRC} ${mc_trajectory_HDR})
 set_target_properties(mc_trajectory PROPERTIES COMPILE_FLAGS "-DMC_TRAJECTORY_EXPORTS")
 target_link_libraries(mc_trajectory PUBLIC SpaceVecAlg::SpaceVecAlg)
+target_link_libraries(mc_trajectory PUBLIC spline)
 install_mc_rtc_lib(mc_trajectory)
 
 set(mc_tasks_SRC
