--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -184,6 +184,7 @@ install_mc_rtc_lib(mc_solver)
 set(mc_trajectory_SRC
 mc_trajectory/BSplineTrajectory.cpp
 mc_trajectory/BSplineConstrainedTrajectory.cpp
+mc_trajectory/ExactCubicTrajectory.cpp
 mc_trajectory/spline_utils.cpp
 )
 
@@ -191,6 +192,7 @@ set(mc_trajectory_HDR
 ../include/mc_trajectory/api.h
 ../include/mc_trajectory/BSplineTrajectory.h
 ../include/mc_trajectory/BSplineConstrainedTrajectory.h
+../include/mc_trajectory/ExactCubicTrajectory.h
 ../include/mc_trajectory/spline_utils.h
 )
 
