Add Global GUI elements
- Trigger new log split from the GUI
- Trigger controller switch from the GUI
- Control gripper from the GUI

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -267,6 +267,7 @@ mc_control/mc_controller.cpp
 mc_control/mc_python_controller.cpp
 mc_control/mc_global_controller.cpp
 mc_control/mc_global_controller_configuration.cpp
+mc_control/mc_global_controller_gui.cpp
 mc_control/mc_global_controller_services.cpp
 )
 set(mc_control_SRC ${mc_control_SRC} PARENT_SCOPE)
