[grippers] Improvments to GenericGripper
- Allow a RobotModule to specify mimics
- Handle mimic offset

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,6 +62,7 @@ set(mc_rbdyn_HDR
 ../include/mc_rbdyn/contact_transform.h
 ../include/mc_rbdyn/CylindricalSurface.h
 ../include/mc_rbdyn/GripperSurface.h
+../include/mc_rbdyn/Mimic.h
 ../include/mc_rbdyn/PlanarSurface.h
 ../include/mc_rbdyn/polygon_utils.h
 ../include/mc_rbdyn/PolygonInterpolator.h
