--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,9 @@ build_debian:
     - export MASTER_PPA=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data"
     - mkdir -p /tmp/_ci/catkin_dep_ws/src
+    - wget https://cmake.org/files/v3.1/cmake-3.1.3-Linux-i386.sh
+    - chmod +x cmake-3.1.3-Linux-i386.sh
+    - ./cmake-3.1.3-Linux-i386.sh --prefix=/usr --skip-license
     - ./.jrl-ci/run before_install
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
@@ -61,6 +64,9 @@ build_gcc_ros:
     - export GIT_DEPENDENCIES=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data"
     - ./.jrl-ci/run before_install
+    - wget https://cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.sh
+    - chmod +x cmake-3.1.3-Linux-x86_64.sh
+    - ./cmake-3.1.3-Linux-x86_64.sh --prefix=/usr --skip-license
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
@@ -79,6 +85,9 @@ build_gcc_ros_debug:
     - export GIT_DEPENDENCIES=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data"
     - ./.jrl-ci/run before_install
+    - wget https://cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.sh
+    - chmod +x cmake-3.1.3-Linux-x86_64.sh
+    - ./cmake-3.1.3-Linux-x86_64.sh --prefix=/usr --skip-license
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
@@ -94,6 +103,9 @@ build_clang_ros:
     - export GIT_DEPENDENCIES=""
     - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data"
     - ./.jrl-ci/run before_install
+    - wget https://cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.sh
+    - chmod +x cmake-3.1.3-Linux-x86_64.sh
+    - ./cmake-3.1.3-Linux-x86_64.sh --prefix=/usr --skip-license
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
   tags:
@@ -103,6 +115,9 @@ build_with_script:
   stage: build
   script:
     - cd utils
+    - wget https://cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.sh
+    - chmod +x cmake-3.1.3-Linux-x86_64.sh
+    - ./cmake-3.1.3-Linux-x86_64.sh --prefix=/usr --skip-license
     - ./build_and_install.sh
   tags:
     - GCC
