[GUI] Use MessagePack from the start to build the GUI message
GUI overhead is now about three times lower than before (i.e. from 0.3ms
to 0.1ms on a complex GUI)

Also:
- Improve documentation
- Enforce return types on callbacks through static_assert
- Add some documentation about the binary format of the GUI message

ToDos:
- Write client code to handle the binary message
- Further (minor?) optimization on GUI's data and form message
  generation
- Provide an API to access inserted elements in order to modify the
  elements after insertion (e.g. rename a button, change the color of a
  point ...)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,7 @@ set(mc_rtc_gui_SRC
 )
 
 set(mc_rtc_gui_HDR
+  ../include/mc_rtc/GUIDetails.h
   ../include/mc_rtc/GUIState.h
   ../include/mc_rtc/GUIState.hpp
   ../include/mc_rtc/GUITypes.h
