[Log] Change log serialization format
- Use MessagePack rather than FlatBuffers
- Add support for logging Eigen::Vector6d and Eigen::VectorXd
- Add the ability to log vector<T> where T is a loggable type without
  other restrictions
- Log sva::PTransformd without converting the rotation to a
  Quaternion before
- Greatly simplify logging code

This also yields a significant performance improvement

ToDo:
- write mc_bin_to_* using mc_rtc::FlatLog
- write a converter for old bin logs to this new format
- remove all FlatBuffers code from mc_rtc

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -30,7 +30,7 @@ if(${ROSCPP_FOUND})
   list(APPEND mc_bin_utils_SRC mc_bin_to_rosbag.cpp)
 endif()
 add_mc_rtc_utils(mc_bin_utils ${mc_bin_utils_SRC})
-target_link_libraries(mc_bin_utils PUBLIC Boost::program_options Boost::disable_autolinking)
+target_link_libraries(mc_bin_utils PUBLIC Boost::program_options Boost::disable_autolinking PRIVATE mpack)
 
 set(UTILS_SCRIPT
   mc_rtc_new_controller
