[cmake] Export include interface

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -331,6 +331,7 @@ foreach(MC_LIB ${MC_LIBRARIES})
   else()
     target_include_directories(${MC_LIB} SYSTEM INTERFACE "${_Eigen_INCLUDE_DIRS}")
   endif()
+  target_include_directories(${MC_LIB} INTERFACE $<INSTALL_INTERFACE:include>)
   if(GENERATE_COVERAGE)
     target_compile_options(${MC_LIB} PRIVATE "--coverage")
     set_target_properties(${MC_LIB} PROPERTIES LINK_FLAGS "--coverage")
