[Trajectory] Fix BSplineTrajectory test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,7 +19,7 @@ target_link_libraries(LoggerTraits PUBLIC mc_control)
 
 add_executable(testBSplineTrajectory testBSplineTrajectory.cpp)
 set_target_properties(testBSplineTrajectory PROPERTIES FOLDER tests/utility)
-target_link_libraries(testBSplineTrajectory PUBLIC mc_trajectory)
+target_link_libraries(testBSplineTrajectory PUBLIC mc_trajectory mc_rtc_gui)
 
 add_executable(testQuadraticGenerator testQuadraticGenerator.cpp)
 set_target_properties(testQuadraticGenerator PROPERTIES FOLDER tests/utility)
