[Trajectory] Refactor splines with CRTP

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -214,6 +214,7 @@ mc_tasks/CoMTask.cpp
 mc_tasks/AddRemoveContactTask.cpp
 mc_tasks/TrajectoryTask.cpp
 mc_tasks/BSplineTrajectoryTask.cpp
+mc_tasks/ExactCubicTrajectoryTask.cpp
 mc_tasks/ComplianceTask.cpp
 mc_tasks/AdmittanceTask.cpp
 mc_tasks/DampingTask.cpp
@@ -224,7 +225,6 @@ mc_tasks/PostureTask.cpp
 mc_tasks/LookAtTask.cpp
 mc_tasks/LookAtSurfaceTask.cpp
 mc_tasks/MetaTaskLoader.cpp
-mc_tasks/ExactCubicTrajectoryTask.cpp
 )
 
 set(mc_tasks_HDR
@@ -240,6 +240,7 @@ set(mc_tasks_HDR
 ../include/mc_tasks/RelativeEndEffectorTask.h
 ../include/mc_tasks/SmoothTask.h
 ../include/mc_tasks/TrajectoryTask.h
+../include/mc_tasks/SplineTrajectoryTask.h
 ../include/mc_tasks/BSplineTrajectoryTask.h
 ../include/mc_tasks/ExactCubicTrajectoryTask.h
 ../include/mc_tasks/TrajectoryTaskGeneric.h
